Put in a check for the dummy option anonymous box, since we actually want text to inherit from it.  Bug 382600, r+sr=dbaron, a=dveditz