mozilla/layout/generic/nsFrame.cpp
@@ -4586,7 +4586,8 @@ nsFrame::CorrectStyleParentFrame(nsIFrame* aProspectiveParent,
     }
       
     nsIAtom* parentPseudo = parent->GetStyleContext()->GetPseudoType();
-    if (!parentPseudo || !nsCSSAnonBoxes::IsAnonBox(parentPseudo)) {
+    if (!parentPseudo || !nsCSSAnonBoxes::IsAnonBox(parentPseudo) ||
+        parentPseudo == nsCSSAnonBoxes::dummyOption) {
       return parent;
     }
 
